fixed dark mode toogler

--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -14,6 +14,38 @@
 	--clr-border: #2f3336;
 }
 
+html,
+body {
+	@apply bg-clr-bg font-inter text-clr-text;
+}
+
+html[data-theme='light'] {
+	--clr-bg: #fff;
+	--clr-bg-grayed: #f7f9f9;
+	--clr-bg-grayed-dark: #f0f3f4;
+	--clr-text: #0f1419;
+	--clr-text-grayed: #536471;
+	--clr-border: #eff3f4;
+}
+
+html[data-theme='dark'] {
+	--clr-bg: #000;
+	--clr-bg-grayed: #202327;
+	--clr-bg-grayed-dark: #16181c;
+	--clr-text: #e7e9ea;
+	--clr-text-grayed: #71767b;
+	--border: #2f3336;
+}
+
+html[data-theme='dimmed'] {
+	--clr-bg: #15202b;
+	--clr-bg-grayed: #263440;
+	--clr-bg-grayed-dark: #1e2732;
+	--clr-text: #f7f9f9;
+	--clr-text-grayed: #8b98a5;
+	--border: #38444d;
+}
+
 @layer utilities {
 	.w-maxed {
 		max-width: 2000px;
@@ -107,9 +139,4 @@
 		-moz-background-clip: text;
 		-moz-text-fill-color: transparent;
 	}
-}
-
-html,
-body {
-	@apply font-inter text-clr-text dark:text-clr-bg;
 }
